package net.proselyte.basepatterns.behavioral.command;

public interface Command {
}
