package net.proselyte.basepatterns.behavioral.command;

public class DeleteCommand {
    Database database;

    public DeleteCommand(Database database) {
        this.database = database;
    }

}
