package net.proselyte.basepatterns.behavioral.command;

public class SelectCommand implements Command {
    Database database;

    public SelectCommand(Database database) {
        this.database = database;
    }

}
